--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
     "next": "15.1.4",
     "prismjs": "^1.29.0",
     "react": "^19.0.0",
