--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^11.1.0",
+    "framer-motion": "^11.16.4",
     "js-cookie": "^3.0.5",
     "next": "15.1.4",
     "prismjs": "^1.29.0",
